# clang-tidy-cpp-demo

./: CMakeLists.txt  README.md  run-clang-tidy.py
src/: main.cpp  test.cpp
src/firstdir/: Student.cpp  firstdirtest.cpp
src/firstdir/seconddir/: seconddirtest.cpp
src/include/: Student.h  firstdirtest.h  seconddirtest.h  test.h
